<resources>
    <string name="app_name">Kidney</string>
    <string name="kidney_home">خود مراقبتی از بیماری های مزمن کلیه</string>
    <string name="login">ورود کاربر</string>
    <string name="source">منابع</string>
    <string name="guide">راهنما</string>
    <string name="assessment">ارزیابی برنامه</string>
    <string name="appBarTxt">خود مراقبتی از بیماری مزمن کلیه</string>
    <string name="loginDemographic">مشخصات دموگرافیک بیمار</string>
    <string name="clinical">مشخصات بالینی بیمار</string>
    <string name="learnPassion">یادگیری بیمار</string>
    <string name="assessmentTxt">ارزیابی برنامه</string>
    <string name="backUp">پشتیبانی</string>
    <string name="nazar">نظرسنجی</string>
    <string name="connectUs">ارتباط با ما</string>
    <string name="name">نام :</string>
    <string name="lastName" translatable="false">نام خانوادگی :</string>
    <string name="age">سن :</string>
    <string name="weight">وزن(کیلو گرم) :</string>
    <string name="height">قد (سانتی متر) :</string>
    <string name="conform">تایید</string>
    <string name="gender">جنسیت :</string>
    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="passion_history">سابقه ی بیماری</string>
    <string name="previous__experiments">افزودن آزمایشات قبلی</string>
    <string name="previous_sonography">افزودن سونوگرافی های قبلی</string>
    <string name="learn_kidney_ill">بیماری کلیه ها</string>
    <string name="learn_health_kidney">سلامت کلیه ها</string>
    <string name="learn_home_care">مراقبت در منزل</string>
    <string name="learn_health_cure">درمان بیماری</string>
    <string name="survey_complete">فرم نظر سنجی رضایت از برنامه</string>
    <string name="survey_text_detail">کاربر گرامی، با شرکت در نظرسنجی و ارزیابی برنامه نرم افزار آموزشی خودمراقبتی از بیماری مزمن کلیه ها، موجب رفع نقص های برنامه خواهید شد و ما را در جهت بهبود برنامه و ارائه برنامه ای جامع و کامل مساعدت خواهید کرد.</string>
    <string name="survey_continue">با تکمیل فرم زیر میزان رضایت خود از برنامه را برای ما ارسال نمایید. باتشکر</string>
    <string name="complete_form">تکمیل فرم ارزیابی اپلیکیشن</string>
    <string name="connectUSTxt">برای ارتباط و کسب اطلاعات بیشتر می توانید با آدرس ایمیل زیر در تماس باشید.</string>
    <string name="email">maryjahany1994@gmail.com</string>
    <string name="SHB">شرح حال بیمار</string>
    <string name="dod">مدت ابتلا به بیماری :</string>
    <string name="drowsiness">خواب آلودگی و خستگی مفرط :</string>
    <string name="changesCreatinine">تغییرات کراتینین خون :</string>
    <string name="handsAndFoot">تورم دست ها، پاها و صورت :</string>
    <string name="ex_protein">دفع پروتئین در ادرار :</string>
    <string name="Urinary">احتباس در ادرار :</string>
    <string name="changing_urinary_color">تغییرات رنگ ادرار :</string>
    <string name="changing_urinary_volume">تغییرات حجم ادرار :</string>
    <string name="hospital_history">سابقه بستری در بیمارستان :</string>
    <string name="result">نتایج آزمایشات</string>
    <string name="kidney_position">علایم اولیه بیماری کلیه:</string>
    <string name="kidney_health_txt">شما دوتا کلیه لوبیایی شکل در دو طرف ستون فقرات خود دارید که تقریبا به اندازه مشت انسان است. آن‌ها در پشت قفسه‌ سینه شما قرار گرفته‌ اند. کلیه ها نقش حیاتی در حفظ سلامت فرد ایفا می‌ کنند.</string>
    <string name="sign_of_progress">علائم پیشرفت بیماری کلیه:</string>
    <string name="medical_services">خدمات پزشکی</string>
    <string name="diagnostic_services">خدمات تشخیصی</string>
    <string name="pharmaceutical">خدمات دارویی</string>
    <string name="health_services">خدمات درمانی</string>
    <string name="nutrition">تغذیه مناسب</string>
    <string name="medication">مصرف دارو</string>
    <string name="control">کنترل</string>
    <string name="proper_exercise">ورزش مناسب</string>
    <string name="addDemographic">افزودن مشخصات دموگرافیک بیمار</string>
</resources>