<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:paddingStart="30dp"
    android:paddingTop="30dp"
    android:paddingEnd="30dp"
    tools:context=".SurveyActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_app_bar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_app_bar">

            <ImageView
                android:id="@+id/img_appBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/login"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/appBarTxt"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/survey_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/iranian_sans"
        android:text="@string/survey_complete"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/survey_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/survey_title"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/iranian_sans"
        android:justificationMode="inter_word"
        android:layoutDirection="rtl"
        android:lineSpacingExtra="7dp"
        android:text="@string/survey_text_detail"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        tools:ignore="UnusedAttribute" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/deta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/survey_detail"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/iranian_sans"
        android:justificationMode="inter_word"
        android:layoutDirection="rtl"
        android:lineSpacingExtra="7dp"
        android:text="@string/survey_continue"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        tools:ignore="UnusedAttribute" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gotolink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_app_bar"
        android:backgroundTintMode="add"
        android:linksClickable="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/complete_form"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_home_24"
        android:tint="@color/black"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_keyboard_return_24"
        android:tint="@color/black"
        tools:ignore="ContentDescription" />


</RelativeLayout>