<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:fillViewport="true"
    tools:context=".AddDemographicActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <LinearLayout
            android:id="@+id/allTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="30dp">


                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@drawable/bg_app_bar">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_app_bar">

                        <ImageView
                            android:id="@+id/img_appBar"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/login"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/appBarTxt"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap" />


                    </RelativeLayout>


                </com.google.android.material.appbar.AppBarLayout>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:id="@+id/demographicTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/iranian_sans"
                        android:gravity="center"
                        android:text="@string/loginDemographic"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/iranian_sans"
                        android:padding="4dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_home"
                        android:hint="@string/name"
                        android:nextFocusDown="@id/last_name"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="14sp"
                        tools:ignore="Autofill,TextFields" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/iranian_sans"
                        android:padding="4dp"
                        android:text="@string/lastName"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_home"
                        android:hint="@string/lastName"
                        android:nextFocusDown="@id/age"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="14sp"
                        tools:ignore="Autofill,TextFields" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/iranian_sans"
                        android:padding="4dp"
                        android:text="@string/age"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_home"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:nextFocusDown="@id/weight"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/iranian_sans"
                        android:padding="4dp"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_home"
                        android:hint="@string/weight"
                        android:inputType="number"
                        android:nextFocusDown="@string/height"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/iranian_sans"
                        android:padding="4dp"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_home"
                        android:hint="@string/height"
                        android:inputType="number"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/iranian_sans"
                        android:padding="4dp"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <RadioGroup
                        android:id="@+id/genderG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/appBar"
                            android:checked="true"
                            android:fontFamily="@font/iranian_sans"
                            android:text="@string/male"
                            android:textColor="@color/black"
                            tools:ignore="UnusedAttribute" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:buttonTint="@color/appBar"
                            android:fontFamily="@font/iranian_sans"
                            android:text="@string/female"
                            android:textColor="@color/black"
                            tools:ignore="UnusedAttribute" />
                    </RadioGroup>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/conform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_app_bar"
                        android:backgroundTintMode="add"
                        android:gravity="center"
                        android:text="@string/conform"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/allTxt"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_baseline_keyboard_return_24"
                android:tint="@color/black"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_baseline_home_24"
                android:tint="@color/black"
                tools:ignore="ContentDescription" />


        </RelativeLayout>


    </RelativeLayout>


</ScrollView>