<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ConnectUsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bg_app_bar">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_app_bar">

                <ImageView
                    android:id="@+id/img_appBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/login"
                    tools:ignore="ContentDescription"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:text="@string/connectUs"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />


            </RelativeLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/iranian_sans"
            android:justificationMode="inter_word"
            android:layoutDirection="rtl"
            android:lineHeight="25dp"
            android:text="@string/connectUSTxt"
            android:textColor="@color/light_black"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_txt"
            android:layout_centerHorizontal="true"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_home_24"
        android:tint="@color/black"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_keyboard_return_24"
        android:tint="@color/black"
        tools:ignore="ContentDescription"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />


</RelativeLayout>