<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".DashboardActivity">


    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="10">


            <LinearLayout
                android:id="@+id/assessment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_assessment"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/arzyyabi"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/iranian_sans"
                    android:text="@string/assessment"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_login"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/login"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/iranian_sans"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="10"
            tools:ignore="DisableBaselineAlignment">


            <LinearLayout
                android:id="@+id/source"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_source"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/source"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/iranian_sans"
                    android:text="@string/source"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/guide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="5"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_guide"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rahnema"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/iranian_sans"
                    android:text="@string/guide"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_home_24"
        android:tint="@color/black"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_baseline_keyboard_return_24"
        android:tint="@color/black"
        tools:ignore="ContentDescription" />


</RelativeLayout>